--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-simple-keyboard": "^3.4.38",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -24,6 +25,9 @@
       "react-app/jest"
     ]
   },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
